cif/org.eclipse.escet.cif.tests/tests/checks/FuncNoSpecificStdLibCheckStochastic.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  -----------------------------------------------------
  (1/15) Standard library function "bernoulli" is used.
  -----------------------------------------------------
   * In discrete variable "BERNOULLI.x":
     - disc dist bool x = bernoulli(1.0);
                          ^

  ------------------------------------------------
  (2/15) Standard library function "beta" is used.
  ------------------------------------------------
   * In discrete variable "BETA.x":
     - disc dist real x = beta(1.0, 2.0);
                          ^

  ----------------------------------------------------
  (3/15) Standard library function "binomial" is used.
  ----------------------------------------------------
   * In discrete variable "BINOMIAL.x":
     - disc dist int x = binomial(1.0, 2);
                         ^

  ----------------------------------------------------
  (4/15) Standard library function "constant" is used.
  ----------------------------------------------------
   * In discrete variable "CONSTANT.B":
     - disc dist bool B = constant(true);
                          ^
   * In discrete variable "CONSTANT.I":
     - disc dist int I = constant(1);
                         ^
   * In discrete variable "CONSTANT.R":
     - disc dist real R = constant(1.0);
                          ^

  --------------------------------------------------
  (5/15) Standard library function "erlang" is used.
  --------------------------------------------------
   * In discrete variable "ERLANG.x":
     - disc dist real x = erlang(1, 2.0);
                          ^

  -------------------------------------------------------
  (6/15) Standard library function "exponential" is used.
  -------------------------------------------------------
   * In discrete variable "EXPONENTIAL.x":
     - disc dist real x = exponential(1.0);
                          ^

  -------------------------------------------------
  (7/15) Standard library function "gamma" is used.
  -------------------------------------------------
   * In discrete variable "GAMMA.x":
     - disc dist real x = gamma(1.0, 2.0);
                          ^

  -----------------------------------------------------
  (8/15) Standard library function "geometric" is used.
  -----------------------------------------------------
   * In discrete variable "GEOMETRIC.x":
     - disc dist int x = geometric(1.0);
                         ^

  -----------------------------------------------------
  (9/15) Standard library function "lognormal" is used.
  -----------------------------------------------------
   * In discrete variable "LOG_NORMAL.x":
     - disc dist real x = lognormal(1.0, 2.0);
                          ^

  ---------------------------------------------------
  (10/15) Standard library function "normal" is used.
  ---------------------------------------------------
   * In discrete variable "NORMAL.x":
     - disc dist real x = normal(1.0, 2.0);
                          ^

  ----------------------------------------------------
  (11/15) Standard library function "poisson" is used.
  ----------------------------------------------------
   * In discrete variable "POISSON.x":
     - disc dist int x = poisson(1.0);
                         ^

  ---------------------------------------------------
  (12/15) Standard library function "random" is used.
  ---------------------------------------------------
   * In discrete variable "RANDOM.x":
     - disc dist real x = random();
                          ^

  -----------------------------------------------------
  (13/15) Standard library function "triangle" is used.
  -----------------------------------------------------
   * In discrete variable "TRIANGLE.x":
     - disc dist real x = triangle(1.0, 2.0, 3.0);
                          ^

  ----------------------------------------------------
  (14/15) Standard library function "uniform" is used.
  ----------------------------------------------------
   * In discrete variable "UNIFORM.I":
     - disc dist int I = uniform(1, 2);
                         ^
   * In discrete variable "UNIFORM.R":
     - disc dist real R = uniform(1.0, 2.0);
                          ^

  ----------------------------------------------------
  (15/15) Standard library function "weibull" is used.
  ----------------------------------------------------
   * In discrete variable "WEIBULL.x":
     - disc dist real x = weibull(1.0, 2.0);
                          ^
